--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,15 @@ code {
 
 ul {
   margin: 0;
+  padding: 0;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+ul,
+li {
+  list-style: none;
 }
